Merged textreranking